# vulkan-voxel-engine

./: .gitignore  CMakeLists.txt
CMake/: ExecutableProject.cmake
Game/: CMakeLists.txt
Game/Resources/Shaders/: FragmentShader.frag  VertexShader.vert
Game/Source/: Main.cpp
Scripts/: bootstrap.py  dependencies.json
Shared/: CMakeLists.txt  shaders.bat
Shared/Source/Core/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  FrameInfo.hpp  KeyboardController.cpp  KeyboardController.hpp  Object.cpp  Object.hpp  SimpleRenderSystem.cpp  SimpleRenderSystem.hpp
Shared/Source/Platform/: Buffer.cpp  Buffer.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
Shared/Source/Utils/: Utils.hpp
